# Enterprise-RAG-Knowledge-Base-Platform

./: .dockerignore  .env.docker  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  start.md  企业私有化生成式AI平台_需求规格与实施计划.md
.claude/: settings.json
.github/workflows/: ci.yml  docker-build.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 649c16d7abf3_init.py  6f8a2c3d9e4b_departments.py  8b815b088037_document_tags.py
backend/app/: config.py  database.py  main.py
backend/app/api/: audit_logs.py  auth.py  categories.py  chat.py  conversations.py  departments.py  documents.py  export.py  feedback.py  stats.py  suggestions.py  users.py
backend/app/middleware/: audit_middleware.py  auth_middleware.py  rate_limit.py
backend/app/models/: __init__.py  audit_log.py  category.py  conversation.py  department.py  document.py  feedback.py  user.py
backend/app/rag/: agent.py  embedder.py  generator.py  loader.py  pipeline.py  retriever.py  splitter.py  tools.py  web_search.py
backend/app/schemas/: auth.py  department.py  document.py  user.py
backend/app/services/: auth_service.py  chat_service.py  document_service.py  tagging_service.py
backend/app/utils/: logger.py
backend/tests/: conftest.py  test_auth.py  test_departments.py  test_documents.py  test_health.py
devlog/: 2026-06-08.md  2026-06-09.md  2026-06-27.md
docs/: 01-开发需求规格.md  02-技术选型与架构设计.md  03-前端设计规范.md  04-后端开发规范.md  05-API接口规范.md  06-数据库设计规范.md  07-AI-Pipeline设计规范.md  08-开发执行步骤.md  Agent功能详细介绍_提示词模板.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/assets/styles/: global.css  variables.css
frontend/src/components/: ConfirmPop.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: AdminDashboard.vue  CategoryManage.vue  ChatView.vue  DepartmentManage.vue  DocumentManage.vue  HistoryView.vue  Login.vue  NotFound.vue  Register.vue  UserManage.vue
nginx/: nginx.conf  nginx.docker.conf
scripts/: init_db.sql  setup_test_docs.py  start.sh
